--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/ivergil/FriendFinder/issues"
   },
-  "homepage": "https://github.com/ivergil/FriendFinder#readme"
+  "homepage": "https://github.com/ivergil/FriendFinder#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "path": "^0.12.7"
+  }
 }
